# StructoUrlShortener

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  main.py  nixpacks.toml  pyproject.toml  railway.toml
analytics/: admin.py  models.py  services.py  urls.py  views.py
analytics/migrations/: 0001_initial.py
analytics/tests/: test_analytics.py
config/: urls.py
config/settings/: base.py  development.py  production.py
shortener/: admin.py  api.py  forms.py  models.py  schemas.py  services.py  urls.py  utils.py  views.py
shortener/migrations/: 0001_initial.py
shortener/tests/: test_api.py  test_models.py  test_services.py
static/: styles.css
templates/: 404.html  500.html  base.html
templates/analytics/: detail.html
templates/registration/: login.html  register.html
templates/shortener/: dashboard.html  home.html
templates/shortener/partials/: form_errors.html  result.html
